認証周りのオペレーションを変更する (#47)
